css/docs.css
/* ... */
html.no-svg #top-hero .jumbotron h1{
  background: url(../img/AngularJS-Shield-medium.png) center no-repeat !important;
  background-size: auto;
  opacity: 1;
}


#top-hero h2{
  font-family: 'Roboto', sans-serif;
  font-weight: 100;
}


#top-hero .slogan{
  overflow: hidden;
  height: 300px;
  opacity: 1;
  -webkit-transition: 600ms height ease;
  -moz-transition: 600ms height ease;
  -o-transition: 600ms height ease;
  -ms-transition: 600ms height ease;
  transition: 600ms height ease;

}

#top-hero .slogan.ng-hide{
  height: 0;
  opacity: 0;
}

#top-hero .slogan.ng-hide.ng-hide-add,
#top-hero .slogan.ng-hide.ng-hide-remove {
  display: block!important;
}

#main-download{
  font-size: 20px;
  margin-top: 20px;
  background: transparent;
  /*border: 1px solid white;
  box-shadow: 0 0 1px rgb(10, 10, 10);
  box-shadow: 0 2px 0px #BDBDBD;*/
  margin-top: 20px;
  background: #DF4E4E;
  border: 1px solid #AC2828;
  box-shadow: 0 2px 0px #A82D2D;
  text-shadow: 0 1px #C51919;
  -webkit-transition: 100ms background linear;
  -moz-transition: 100ms background linear;
  -o-transition: 100ms background linear;
  -ms-transition: 100ms background linear;
  transition: 100ms background linear;
}

#main-download:hover{
  background: #EB5F5F;
}

#main-download:active, #main-download.active{
  margin-top: 22px;
  box-shadow: 0 0px 0px #BDBDBD;
  background: #C23232;
}

.downloadBox{
  position: relative;
  text-align: left;
  background: white;
  border-radius: 4px;
  margin: 0 auto;
  margin-top: 40px;
  height: 400px;
  color: black;
  opacity: 1;
  transition: 600ms opacity linear;
}

.downloadBox::after{
  content: " ";
  position: absolute;
  top: -40px;
  left: 50%;
  width: 0;
  height: 0;
  border-left: 20px solid transparent;
  border-right: 20px solid transparent;
  border-top: 20px solid transparent;
  border-bottom: 20px solid white;
  margin-left: -20px;
  pointer-events: none;
}

.downloadBox.ng-hide-add,
.downloadBox.ng-hide-remove {
  display: block!important;
}

.downloadBox.ng-hide{
  opacity: 0;
}

.downloadBox .btn{
  font-size: 14px;
}

.downloadBox .close{
  margin-top: 15px;
  margin-right: 15px;
}

.downloadBox .popover{
  min-width: 500px;
  font-size: 12px;
}

.downloadBox form{
  padding: 30px 20px 0 20px;
}

.downloadBox form .help-text{
  color: gray;
  margin-left: 10px;
}

.downloadBox form i.icon-question-sign{
  margin-left: 5px;
}

.social{
  background-color: #f5f5f5;
  border-top: 1px solid #fff;
  border-bottom: 1px solid #eee;
  padding: 20px;
}

.social .quick-links{
  margin: 0;
  margin-bottom: 0px;
}

.why-angular h2{
  padding-bottom: 10px;
  border-bottom: 4px solid #EBEBEB;
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
}

.why-angular .icon{
  font-size: 32px;
  text-align: center;
}

.example .preview{
  position: relative;
  background: white;
  border: 1px solid #DFDFDF;
  padding: 20px;
  padding-top: 55px;
  border-radius: 4px;
}

.example .preview::before{
  content: "Preview";
  font-family: "Roboto", sans-serif;
  font-weight: 200;
  line-height: 40px;
  font-size: 18px;
  padding-left: 20px;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 40px;
  border-top-right-radius: 4px;
  border-top-left-radius: 4px;
  border-bottom: 2px dotted #DF2E31;
  color: #FFF;
  background-position-y: 15px;

  border-bottom: 1px solid #000;
  border: 1px solid #000;
  box-shadow: 0 1px 0 #4D4D4D inset;
  color: #FFF;
  background-position-y: 15px;
}

.example ul.nav{
   border-bottom: 0 none;
}


.example pre.nocode{
   border-radius: 0;
}

.example .action{
  position: absolute;
  right: 15px;
}

@media (min-width: 450px){
  .example .col-md-4::before{ 
    content: "\f078";
    position: absolute;
    left: 50%;
    top: -24px;
    color: #F3560C;
    font-family: "FontAwesome";
    font-size: 34px;
  }

  #top-hero .jumbotron.downloadVisible{
    height: 650px;
  }

  .downloadBox{
    height: 600px;
  }
}

@media (min-width: 992px){
  .example .col-md-4::before{ 
    content: "\f054";
    position: absolute;
    left: -7px;
    top: 50%;
    color: #F3560C;
    font-family: "FontAwesome";
    font-size: 34px;
  }

  #top-hero .jumbotron.downloadVisible {
    height: 480px;
  }
}

hr.shield{
  border-bottom: 1px solid #EEE;
  margin-top: 45px;
  margin-bottom: 70px;
  text-align: center;
}

hr.shield:after {
  content: url('../img/shield_rule.png');
  color: #999;
  position: relative;
  top: -28px;
}

.nocode > ol.linenums {
  margin: 0;
  font-size: 13px;
}

.footer p {
  margin: 0;
}

.popover-content{
  word-break: normal;
  min-width: 200px;
}

form.jsfiddle {
  display: inline;
}

code.nocode {
  display: inline-block;
/*  background-color: #99c2ff;
  border: 1px solid #7699d1;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  color: #223f7a;

  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  border: 1px solid #e1e1e8;*/
  border-bottom: 2px dotted gray;
}

.example {
  margin-top: 1em;
}

.navbar{
  border-bottom: 1px solid #C33C3A;
  outline: 3px solid rgba(95, 95, 95, 0.15);
}

.navbar .navbar-brand{
  margin-top: -11px;
  height: 61px;
  transition: 100ms background linear;
}

.navbar .navbar-brand:hover{
  background: #E7E7E7;
}

.navbar .navbar-brand:active{
  background: #E4E4E4;
  box-shadow: 0 0 1px #808080;
}

.navbar .navbar-brand:active > img{
  -webkit-transform: translateY(1px);
}


.navbar .divider-vertical {margin: 0}
/* .navbar .nav > li > a {padding: 10px 23px 11px 20px;} */

.center {
  text-align: center;
}

.quick-links {
  text-align: center;
  list-style: none;
  margin-top: 50px;
}

.quick-links > li {
  display: inline-block;
  margin: 0 1em;
  vertical-align: top;
}

.google-follow {
  font-family: 'Helvetica Neue', Arial, sans-serif;
  font-size: 11px;
  font-weight: bold;
}


.video-img {
  width: 300px;
  height: 200px;
  background:url("../img/video-over.png")
}

.video-img:hover img{
  position:absolute; left:-999px; top:-999px;
}
/* ... */

